# manchester-code

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  tests.rs
